z-index bug

--- a/src/sass/layout/_uslugi.scss
+++ b/src/sass/layout/_uslugi.scss
@@ -281,10 +281,16 @@
     border-color: #61a327;
 }
 .b-modal{
-	// z-index: 1000 !important;	
+	z-index: 8998 !important;	
 }
 .uslugi-popup__wrap{
-	// z-index: 1001 !important;
+	z-index: 8999 !important;
+}
+.lightboxOverlay{
+	z-index: 9000 !important;	
+}
+.lightbox{
+	z-index: 9001 !important;
 }
 //------------------------------------------- Media -----------------------------------------------
 @include breakpoint(1060){
